--- a/Client/index.html
+++ b/Client/index.html
@@ -2,8 +2,10 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
-    <script src="index.js"></script>
+    
   </head>
   <body>
+    <div id="app"></div>
+    <script src="index.js"></script>
   </body>
 </html>
