--- a/Client/index.html
+++ b/Client/index.html
@@ -2,10 +2,13 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
-    
+    <link rel="stylesheet" href="main.css"/>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.css"/>
   </head>
   <body>
     <div id="app"></div>
     <script src="index.js"></script>
+    <script src="jquery/jquery-3.1.1.min.js"></script>
+    <script src="bootstrap/js/bootstrap.js"></script>
   </body>
 </html>
