--- a/Client/index.html
+++ b/Client/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="main.css"/>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css"/>
+    <link rel="stylesheet" href="animate.css"/>
   </head>
   <body>
     <div id="app"></div>
