--- a/Client/prod/index.html
+++ b/Client/prod/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="index.js"></script>
+    <script src="bundle.js"></script>
     <script src="jquery/jquery-3.1.1.min.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>
   </body>
